Added better navigations icons on booking schema.

--- a/src/Club/BookingBundle/Resources/views/Overview/table.html.twig
+++ b/src/Club/BookingBundle/Resources/views/Overview/table.html.twig
@@ -44,7 +44,7 @@
 <div class="fix"></div>
 <p>&#160;</p>
 
-<p>[<a id="prev">&#60;</a>] [<a id="next">&#62;</a>]</p>
+<p><a id="prev"><img src="{{ asset('bundles/clublayout/images/icons/32x32/arrow_left.png') }}" /></a> <a id="next"><img src="{{ asset('bundles/clublayout/images/icons/32x32/arrow_right.png') }}" /></a></p>
 
 <div id="overlay">
   <div id="booking">
