--- a/src/Club/LayoutBundle/Resources/public/css/booking.css
+++ b/src/Club/LayoutBundle/Resources/public/css/booking.css
@@ -12,6 +12,7 @@ div#nav_overlay
   left: 100px;
   top: 0px;
   overflow: hidden;
+  border-left: solid 1px #c3c3c3;
 }
 
 div#preloader
@@ -28,6 +29,7 @@ div#booking
   position: absolute;
   z-index: 0px;
   padding-right: 20px;
+  background-color: #f4f4f4;
 }
 
 div#booking div#times
@@ -108,6 +110,7 @@ div#booking div.time
   float: left;
   border-left: dotted 1px #c3c3c3;
   text-align: center;
+  background-color: #f4f4f4;
 }
 
 div#booking div.field
@@ -115,5 +118,7 @@ div#booking div.field
   position: absolute;
   width: 100%;
   border-top: solid 1px #c3c3c3;
+  background-color: #5f5f5f;
+  color: #ffffff;
 }
 
