--- a/src/Club/BookingBundle/Resources/views/Overview/index.html.twig
+++ b/src/Club/BookingBundle/Resources/views/Overview/index.html.twig
@@ -2,6 +2,19 @@
 
 {% block javascripts %}
   <script src="{{ asset('bundles/clublayout/js/booking.js') }}" type="text/javascript"></script>
+  <script>
+  $(document).ready(function() {
+    $("#date").datepicker({
+      showOn: "button",
+      buttonImage: "{{ asset('bundles/clublayout/images/icons/16x16/calendar.png') }}",
+      buttonImageOnly: true,
+      dateFormat: "yy-mm-dd",
+      onSelect: function (dateText, inst) {
+        location.href="{{ path('homepage') }}booking/"+dateText
+      }
+    });
+  });
+  </script>
 {% endblock %}
 
 {% block stylesheets %}
@@ -9,11 +22,15 @@
 {% endblock %}
 
 {% block body %}
-<h2>Booking - {{ date|date('Y-m-d') }}</h2>
+<form method="post">
+<h2>{{ date|date('D, j M Y') }} <input type="hidden" name="date" id="date" /></h2>
+</form>
 
+<p class="box">
 {% for item in nav %}
-  <div class="col33 t-right"><a href="{{ path('club_booking_overview_index', {'date':item|date('Y-m-d')}) }}">{{ item|date('l') }} &raquo;</a></div>
+  <a class="btn" href="{{ path('club_booking_overview_index', {'date':item|date('Y-m-d')}) }}"><span>{{ item|date('l') }} &raquo;</span></a>
 {% endfor %}
+</p>
 
 {% include "ClubBookingBundle:Overview:table.html.twig" %}
 
