Added dynamic welcome page.

--- a/src/Club/WelcomeBundle/Resources/views/Welcome/index.html.twig
+++ b/src/Club/WelcomeBundle/Resources/views/Welcome/index.html.twig
@@ -2,4 +2,9 @@
 
 {% block body %}
 <p>Welcome to ClubMaster</p>
+
+{% if welcome.content is defined %}
+{{ welcome.content|raw }}
+{% endif %}
+
 {% endblock %}
