--- a/src/Club/BookingBundle/Resources/views/Overview/view.html.twig
+++ b/src/Club/BookingBundle/Resources/views/Overview/view.html.twig
@@ -1,7 +1,7 @@
 {% extends "ClubBookingBundle::base.html.twig" %}
 
 {% block body %}
-<h2>Booking</h2>
+<h2>{% trans %}Booking{% endtrans %}</h2>
 
 {% include "ClubBookingBundle:Overview:information.html.twig" %}
 
