--- a/src/Club/BookingBundle/Resources/views/Booking/review.html.twig
+++ b/src/Club/BookingBundle/Resources/views/Booking/review.html.twig
@@ -1,20 +1,20 @@
 {% extends "ClubBookingBundle::base.html.twig" %}
 
 {% block body %}
-<h2>Booking</h2>
+<h2>{% trans %}Booking{% endtrans %}</h2>
 
 <fieldset>
-  <legend>Booking Information</legend>
+  <legend>{% trans %}Booking Information{% endtrans %}</legend>
   <div class="list">
-    <p><label>Location</label>{{ booking.interval.field.location.locationName }}</p>
-    <p><label>Date</label>{{ booking.date|date('Y-m-d') }}</p>
-    <p><label>Time</label>{{ booking.interval.startTime|date('H:i') }} - {{ booking.interval.stopTime|date('H:i') }}</p>
-    <p><label>Field</label>{{ booking.interval.field.name }}</p>
-    <p><label>Booker</label>{{ booking.user.name }}</p>
+    <p><label>{% trans %}Location{% endtrans %}</label>{{ booking.interval.field.location.locationName }}</p>
+    <p><label>{% trans %}Date{% endtrans %}</label>{{ booking.date|date('Y-m-d') }}</p>
+    <p><label>{% trans %}Time{% endtrans %}</label>{{ booking.interval.startTime|date('H:i') }} - {{ booking.interval.stopTime|date('H:i') }}</p>
+    <p><label>{% trans %}Field{% endtrans %}</label>{{ booking.interval.field.name }}</p>
+    <p><label>{% trans %}Booker{% endtrans %}</label>{{ booking.user.name }}</p>
     {% if booking.guest %}
-    <p><label>Partner</label>Guest</p>
+    <p><label>{% trans %}Partner{% endtrans %}</label>Guest</p>
     {% else %}
-      <p><label>Partner</label>
+      <p><label>{% trans %}Partner{% endtrans %}</label>
       {% for partner in booking.users %}
         {{ partner.name }}
       {% endfor %}
@@ -22,15 +22,15 @@
     {% endif %}
 
     {% if booking.interval.field.information %}
-    <h3>Information</h3>
+    <h3>{% trans %}Information{% endtrans %}</h3>
     <p>{{ booking.interval.field.information }}</p>
     {% endif %}
   </div>
 </fieldset>
 
 <fieldset>
-  <legend>Confirm</legend>
-    <p>Click here to confirm your booking.</p>
+  <legend>{% trans %}Confirm{% endtrans %}</legend>
+    <p>{% trans %}Click here to confirm your booking.{% endtrans %}</p>
     <form method="post" action="{{ path('club_booking_booking_confirm') }}">
       <hr class="noscreen" />
       <div class="box-01">
