--- a/src/Club/ShopBundle/Resources/views/Subscription/show.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Subscription/show.html.twig
@@ -12,7 +12,7 @@
     </tr>
     <tr>
       <th>Price:</th>
-      <td>{{ subscription.orderProduct.price|price }}</td>
+      <td>{{ subscription.orderProduct.price|club_price }}</td>
     </tr>
     <tr>
       <th>Period:</th>
