--- a/src/Club/EventBundle/Resources/views/Event/show.html.twig
+++ b/src/Club/EventBundle/Resources/views/Event/show.html.twig
@@ -17,7 +17,7 @@
     {% trans with {'%date%':event.startDate|date('Y-m-d H:i')} %}Start date: %date%{% endtrans %}<br />
     {% trans with {'%date%':event.stopDate|date('Y-m-d H:i')} %}Start date: %date%{% endtrans %}<br />
     {% if event.price == '' %}{% trans with {'%price%':'-'} %}Price: %price%{% endtrans %}
-    {% else %}{% trans with {'%price%':event.price|price} %}Price: %price%{% endtrans %}{% endif %}
+    {% else %}{% trans with {'%price%':event.price|club_price} %}Price: %price%{% endtrans %}{% endif %}
   </p>
 
   <h2>{% trans %}Description{% endtrans %}</h2>
