--- a/src/Club/ShopBundle/Resources/views/Checkout/cart_confirm.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Checkout/cart_confirm.html.twig
@@ -11,9 +11,9 @@
   {% for item in cart.cartProducts %}
   <tr>
     <td>{{ item.productName }}</td>
-    <td>{{ item.price|price }}</td>
+    <td>{{ item.price|club_price }}</td>
     <td>{{ item.quantity }}</td>
-    <td>{{ item.summary|price }}</td>
+    <td>{{ item.summary|club_price }}</td>
   </tr>
   {% else %}
   <tr>
@@ -27,7 +27,7 @@
   </tr>
   <tr>
     <td style="text-align: right; padding-right: 20px;" colspan="3"><b>{% trans %}Summary{% endtrans %}</b></td>
-    <td>{{ cart.price|price }}</td>
+    <td>{{ cart.price|club_price }}</td>
   </tr>
   </tfoot>
 </table>
