--- a/src/Club/ShopBundle/Resources/views/Checkout/cart_form.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Checkout/cart_form.html.twig
@@ -11,12 +11,12 @@
   {% for item in cart.cartProducts %}
   <tr>
     <td>{{ item.productName }}</td>
-    <td>{{ item.price|price }}</td>
+    <td>{{ item.price|club_price }}</td>
     <td>{{ item.quantity }}
       {% if item.type == 'product' %}<a href="{{ path('club_shop_checkout_increment', {'id':item.id}) }}">[+]</a>  <a href="{{ path('club_shop_checkout_decrement', {'id':item.id}) }}">[-]</a>{% endif %}
       {% if item.type == 'coupon' %}<a href="{{ path('club_shop_checkout_decrement', {'id':item.id}) }}">[-]</a>{% endif %}
     </td>
-    <td>{{ item.summary|price }}</td>
+    <td>{{ item.summary|club_price }}</td>
   </tr>
   {% else %}
   <tr>
@@ -30,7 +30,7 @@
   </tr>
   <tr>
     <td style="text-align: right; padding-right: 20px;" colspan="3"><b>{% trans %}Summary{% endtrans %}</b></td>
-    <td>{{ cart.price|price }}</td>
+    <td>{{ cart.price|club_price }}</td>
   </tr>
   </tfoot>
 </table>
