--- a/src/Club/ShopBundle/Resources/views/AdminOrder/edit.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminOrder/edit.html.twig
@@ -51,7 +51,7 @@
   <tbody>
   {% for status in order.orderStatusHistory %}
     <tr>
-      <td>{{ status.createdAt|date('Y-m-d H:i:s') }}</td>
+      <td>{{ status.createdAt|club_datetime }}</td>
       <td>{{ status.orderStatus.statusName }}</td>
       <td>{{ status.note }}</td>
   {% endfor %}
