--- a/src/Club/BookingBundle/Resources/views/AdminInterval/index.html.twig
+++ b/src/Club/BookingBundle/Resources/views/AdminInterval/index.html.twig
@@ -30,10 +30,10 @@
       <td>{{ interval.field.location }}</td>
       <td>{{ interval.field }}</td>
       <td>{{ interval.day(true).format('l') }}</td>
-      <td>{{ interval.startTime|date('H:i') }}</td>
-      <td>{{ interval.stopTime|date('H:i') }}</td>
-      <td>{{ interval.validFrom|date('Y-m-d H:i') }}</td>
-      <td>{{ interval.validTo|date('Y-m-d H:i') }}</td>
+      <td>{{ interval.startTime|club_time }}</td>
+      <td>{{ interval.stopTime|club_time }}</td>
+      <td>{{ interval.validFrom|club_datetime }}</td>
+      <td>{{ interval.validTo|club_datetime }}</td>
       <td>
         {% include "ClubLayoutBundle:Default:edit_link.html.twig" with {'url':path('club_booking_admininterval_edit', { 'id':interval.id })} %}
         {% include "ClubLayoutBundle:Default:delete_link.html.twig" with {'url':path('club_booking_admininterval_delete', { 'id':interval.id })} %}
