--- a/src/Club/BookingBundle/Resources/views/Overview/index.html.twig
+++ b/src/Club/BookingBundle/Resources/views/Overview/index.html.twig
@@ -23,7 +23,7 @@
 
 {% block body %}
 <form method="post">
-<h2>{{ date|date('D, j M Y') }} <input type="hidden" name="date" id="date" /></h2>
+<h2>{{ date|club_date('full') }} <input type="hidden" name="date" id="date" /></h2>
 </form>
 
 <p class="box">
