--- a/src/Club/EventBundle/Resources/views/Event/show.html.twig
+++ b/src/Club/EventBundle/Resources/views/Event/show.html.twig
@@ -14,8 +14,8 @@
 
   <h2 class="nomb">{{ event.eventName }}</h2>
   <p class="nomt low">
-    {% trans with {'%date%':event.startDate|date('Y-m-d H:i')} %}Start date: %date%{% endtrans %}<br />
-    {% trans with {'%date%':event.stopDate|date('Y-m-d H:i')} %}Start date: %date%{% endtrans %}<br />
+    {% trans with {'%date%':event.startDate|club_datetime} %}Start date: %date%{% endtrans %}<br />
+    {% trans with {'%date%':event.stopDate|club_datetime} %}Start date: %date%{% endtrans %}<br />
     {% if event.price == '' %}{% trans with {'%price%':'-'} %}Price: %price%{% endtrans %}
     {% else %}{% trans with {'%price%':event.price|club_price} %}Price: %price%{% endtrans %}{% endif %}
   </p>
