--- a/src/Club/ShopBundle/Resources/views/AdminCoupon/history.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminCoupon/history.html.twig
@@ -23,8 +23,8 @@
       <td>{{ coupon.couponKey }}</td>
       <td>{{ coupon.value }}</td>
       <td>{{ coupon.maxUsage }}</td>
-      <td>{{ coupon.expireAt|date('Y-m-d H:i:s') }}</td>
-      <td>{{ coupon.createdAt|date('Y-m-d H:i:s') }}</td>
+      <td>{{ coupon.expireAt|club_datetime }}</td>
+      <td>{{ coupon.createdAt|club_datetime }}</td>
       <td>
         {% include "ClubLayoutBundle:Default:edit_link.html.twig" with {'url':path('club_shop_admincoupon_edit', { 'id':coupon.id })} %}
         {% include "ClubLayoutBundle:Default:expire_link.html.twig" with {'url':path('club_shop_admincoupon_expire', { 'id':coupon.id })} %}
