--- a/src/Club/ShopBundle/Resources/views/AdminOrder/index.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminOrder/index.html.twig
@@ -29,8 +29,8 @@
       <td>{{ order.user.profile.firstName }} {{ order.user.profile.lastName }}</td>
       <td>{{ order.price|club_price }}</td>
       <td>{{ order.orderStatus.statusName }}</td>
-      <td>{{ order.createdAt|date('Y-m-d H:i:s') }}</td>
-      <td>{{ order.updatedAt|date('Y-m-d H:i:s') }}</td>
+      <td>{{ order.createdAt|club_datetime }}</td>
+      <td>{{ order.updatedAt|club_datetime }}</td>
       <td>
         {% include "ClubLayoutBundle:Default:edit_link.html.twig" with {'url':path('admin_shop_order_edit', { 'id':order.id })} %}
         {% include "ClubLayoutBundle:Default:delete_link.html.twig" with {'url':path('admin_shop_order_delete', { 'id':order.id })} %}
