--- a/src/Club/ShopBundle/Resources/views/AdminSubscription/subscription_table.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminSubscription/subscription_table.html.twig
@@ -15,11 +15,11 @@
     <tr>
       <td>{% include "ClubLayoutBundle:Default:boolean.html.twig" with {'flag':subscription.active} %}</td>
       <td>{{ subscription.user.profile.firstName }} {{ subscription.user.profile.lastName }}</td>
-      <td>{{ subscription.startDate|date('Y-m-d H:i') }}</td>
+      <td>{{ subscription.startDate|club_datetime }}</td>
       {% if subscription.expireDate == '' %}
       <td>{% trans %}Never{% endtrans %}</td>
       {% else %}
-      <td>{{ subscription.expireDate|date('Y-m-d H:i') }}</td>
+      <td>{{ subscription.expireDate|club_datetime }}</td>
       {% endif %}
       <td>
         {% if subscription.active %}
