--- a/src/Club/WelcomeBundle/Resources/views/AdminBlog/form.html.twig
+++ b/src/Club/WelcomeBundle/Resources/views/AdminBlog/form.html.twig
@@ -1,3 +1,16 @@
-  <p>{{ form_widget(form) }}</p>
-  {% include "ClubLayoutBundle:Default:submit_button.html.twig" %}
+  <fieldset>
+    <legend>{% trans %}Post blog{% endtrans %}</legend>
 
+    {{ form_row(form.title) }}
+    <p>
+      {{ form_label(form.message) }}
+      {{ form_widget(form.message, {'attr': {'class':'big'}}) }}
+      {{ form_errors(form.message) }}
+    </p>
+    {{ form_rest(form) }}
+  </fieldset>
+
+  <hr class="noscreen" />
+  <div class="box-01">
+    <p class="nom"><input formnovalidate="true" type="submit" value="{% trans %}Save{% endtrans %}" class="input-submit" /></p>
+  </div> <!-- /box-01 -->
